# ticketing-blended-app

./: Cargo.toml  Makefile
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: connect-button.tsx
frontend/src/components/ui/: connect-button.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: window.d.ts
solidity/: .gitignore  hardhat.config.ts  package-lock.json  package.json
solidity/contracts/: ITicketValidator.sol  Ticketing.sol
solidity/deploy/: 001_deploy_contracts.ts
solidity/tasks/: ticketing.ts
src/: lib.rs
