[package]
edition = "2021"
name = "ticketing"
version = "0.1.0"

[dependencies]
alloy-sol-types = {version = "0.7.4", default-features = false}
fluentbase-sdk = {git = "https://github.com/fluentlabs-xyz/fluentbase", default-features = false, branch = "devel"}
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[features]
default = []
std = [
  "fluentbase-sdk/std",
]
